--- a/index.html
+++ b/index.html
@@ -4,20 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Video Streaming</title>
-    <style>
-      body {
-        margin: 40px auto;
-        max-width: 650px;
-        line-height: 1.6;
-        font-size: 18px;
-        font-family: "Courier New", Courier, monospace;
-        color: #444;
-        padding: 0 10px;
-      }
-      h2 {
-        line-height: 1.2;
-      }
-    </style>
+    <link rel="stylesheet" type="text/css" href="css/style.css" />
   </head>
 
   <body>
@@ -26,5 +13,8 @@
       <source src="/video" type="video/mp4" />
     </video>
     <i>Big Buck Bunny</i>
+    <hr/>
+    <button id="myButton">Đồng ý</button>
   </body>
+  <script src="js/client.js"></script>
 </html>
