--- a/data.html
+++ b/data.html
@@ -1,24 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head>
-        <script src="js/script.js"></script>
-        <link rel="stylesheet" href="css/style.css" />
-        <meta charset="UTF-8" />
-        <meta name="viewport" 
-              content="width=device-width, initial-scale=1.0" />
-        <title>Document</title>
-    </head>
-    <body>
-        <!-- Here a loader is created which 
+
+<head>
+    <script src="js/script.js"></script>
+    <link rel="stylesheet" href="css/style.css" />
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
+        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <title>Document</title>
+</head>
+
+<body>
+    <!-- Here a loader is created which 
              loads till response comes -->
-        <div class="d-flex justify-content-center">
-            <div class="spinner-border" 
-                 role="status" id="loading">
-                <span class="sr-only">Loading...</span>
-            </div>
+    <div class="d-flex justify-content-center">
+        <div class="spinner-border" role="status" id="loading">
+            <span class="sr-only">Loading...</span>
         </div>
-        <h1>Registered Employees</h1>
-        <!-- table for showing data -->
-        <table id="employees"></table>
-    </body>
+    </div>
+    <h1>Registered Employees</h1>
+    <!-- table for showing data -->
+    <table id="employees"></table>
+</body>
+
 </html>
